--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,10 @@ header{
     font-family: "Rubik", sans-serif;
     font-weight: 300;
 }
+header h2{
+    font-size: 68px;
+}
+footer{
+    text-align: center;
+    
+}
