--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,83 @@
-header{
-    text-align: center;
+:root{
+    --primary-color:#33a2c4;
+}
+
+body{
+      text-align: center;
     font-family: "Rubik", sans-serif;
-    font-weight: 300;
+    font-weight: 300;  
+}
+
+header{
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.8)), url("/img/mini-bg.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    color:white;
+    letter-spacing: 5px;
+    padding:120px 0;
+    text-transform: capitalize;
+
+}
+header h1{
+    font-size: 96px;
+    font-weight: 700px;
+    line-height: 1;
 }
 header h2{
-    font-size: 68px;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 1;
+    margin-bottom: 120px;
+}
+header h3{
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 1;
+}
+header a{
+    font-weight: 700;
+    background:rgba(255, 255, 255, 0.9);
+    font-size: 18px;
+    padding:30px 40px;
+    border-radius: 8px;
+    border: 3px solid var(--primary-color);
+    text-decoration: none;
+    color:#33a2c4;
+    text-transform:uppercase;
+
+}
+header a:hover{
+    border:3px solid white;
+    background-color: var(--primary-color);
+    color:white;
+    text-decoration: underline;
 }
 footer{
     text-align: center;
-    
+
+}
+.container{
+    max-width: 1800px;
+    margin:0 auto;
+}
+
+@media(width < 1200px){
+    header h1{
+        font-size:46px;
+    }
+    header h2{
+        font-size:18px;
+        margin-bottom:60px;
+    }
+    header h3{
+        font-size:16px;
+    }
+    header a{
+        font-size:10px;
+        padding:15px 20px;
+        margin:0;
+    }
+    header{
+        padding:60px 0;
+    }
 }
