--- a/src/style.css
+++ b/src/style.css
@@ -52,16 +52,45 @@ header a:hover{
     color:white;
     text-decoration: underline;
 }
-footer{
-    text-align: center;
-
+.grid{
+    display:grid;
+    grid-template-columns: 1fr 2fr 2fr;
+    column-gap: 20px;
 }
-.container{
-    max-width: 1800px;
+section{
+    max-width: 80%;
     margin:0 auto;
 }
+footer{
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/img/MGA_MakeItMiniCafe.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    color:white;
+    padding:80px 0;
+}
+footer p{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    opacity:0.7;
+}
+footer ul{
+    padding:0;
+}
+footer li{
+    list-style: none;
+    text-decoration: none;
+    margin:0;
+    padding:0 0 10px 0;
+    text-align: center;
+}
+footer a{
+    color:white;
+    opacity: 0.7;
+    text-decoration: none;
+}
 
-@media(width < 1200px){
+@media(width < 960px){
     header h1{
         font-size:46px;
     }
