--- a/src/style.css
+++ b/src/style.css
@@ -40,6 +40,17 @@ h3{
     font-size: 22px;
     line-height: 1;
 }
+h4{
+    margin:0;
+    padding:0;
+    font-size: 24px;
+}
+h5{
+    margin: 0;
+    padding: 0;
+    font-size: 18px;
+}
+
 header a{
     font-weight: 700;
     background:rgba(255, 255, 255, 0.9);
@@ -63,7 +74,6 @@ header a:hover{
     column-gap: 20px;
 }
 .main-section-text {
-
     text-align: left;
 }
 main .grid{
@@ -82,8 +92,9 @@ main h2{
 main p{
     padding:0;
     font-size: 16px;
+    line-height: 1.5;
 }
-main{
+main .grid{
     padding: 20px;
     margin:50px 150px;
 }
@@ -91,6 +102,47 @@ img{
     display:flex;
     max-width: 100%;
 }
+.card{
+    background:white;
+    text-align: left;
+}
+.card p{
+    margin:10px 0 30px 0;
+}
+.card-body{
+    padding:30px 50px 60px 50px;
+}
+.card-footer{
+    text-align: center;
+    margin-top:50px;
+}
+.card-footer a{
+    background:midnightblue;
+    color:white;
+    padding:20px 140px;
+    text-decoration: none;
+    border-radius: 4px;
+    margin:0 auto;
+    font-size: 16px;
+    font-weight: 500;
+    font-kerning: auto;
+}
+.card-footer a:hover{
+    background-color: rgba(25, 25, 112, 0.9);
+}
+.secondary .three-column-grid{
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 70px;
+}
+main .secondary{
+    margin:50px 0;
+    background-color: rgba(0,0,0,0.075);
+    padding:20px 0;
+}
+.secondary p, h4, h5{
+    padding:0;
+}
+
 footer section {
     max-width: 80%;
     margin:0 auto;
