--- a/src/style.css
+++ b/src/style.css
@@ -119,13 +119,14 @@ img{
 .card-footer a{
     background:midnightblue;
     color:white;
-    padding:20px 100px;
+    padding:20px 60px;
     text-decoration: none;
     border-radius: 4px;
     margin:0 auto;
     font-size: 16px;
     font-weight: 500;
     font-kerning: auto;
+    max-width: 100%;
 }
 .card-footer a:hover{
     background-color: rgba(25, 25, 112, 0.9);
