--- a/src/style.css
+++ b/src/style.css
@@ -73,12 +73,17 @@ header a:hover{
     display:grid;
     column-gap: 20px;
 }
+.grid-two-columns{
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+iframe{
+    aspect-ratio: 1/1;
+}
 .main-section-text {
     text-align: left;
 }
-main .grid{
-    grid-template-columns: 1fr 1fr;
-}
+
 main h3{
     opacity: 0.5;
     padding:10px 0 0 0;
@@ -110,11 +115,11 @@ img{
     margin:10px 0 30px 0;
 }
 .card-body{
-    padding:30px 50px 60px 50px;
+    padding:30px 50px 50px 50px;
 }
 .card-footer{
     text-align: center;
-    margin-top:50px;
+    margin:60px 0 0 0;
 }
 .card-footer a{
     background:midnightblue;
@@ -122,7 +127,6 @@ img{
     padding:20px 60px;
     text-decoration: none;
     border-radius: 4px;
-    margin:0 auto;
     font-size: 16px;
     font-weight: 500;
     font-kerning: auto;
@@ -131,9 +135,9 @@ img{
 .card-footer a:hover{
     background-color: rgba(25, 25, 112, 0.9);
 }
-.secondary .three-column-grid{
+.three-column-grid{
     grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 70px;
+    column-gap: 50px;
 }
 main .secondary{
     margin:50px 0;
@@ -142,6 +146,9 @@ main .secondary{
 }
 .secondary p, h4, h5{
     padding:0;
+}
+.instagram-grid .three-column-grid{
+   column-gap: 10px;
 }
 
 footer section {
@@ -152,7 +159,7 @@ footer .grid{
     grid-template-columns: 1fr 2fr 2fr;
 }
 footer{
-    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)), url(/img/MGA_MakeItMiniCafe.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.8), rgba(0,0,0,0.9)), url(/img/MGA_MakeItMiniCafe.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     color:white;
@@ -181,14 +188,32 @@ footer a{
 }
 
 @media(width < 960px){
-    header h1{
+    body{
+        max-width: 100%;
+    }
+    .container{
+        max-width: 100%;
+        grid-template-columns: 1fr;
+    }
+    .card{
+        margin:20px 10px;
+    }
+ 
+    .grid.grid-two-columns, .grid.instagram-grid{
+        margin:0 auto;
+        padding:0;
+    }
+    .grid.three-column-grid{
+        margin:0 auto;
+    }
+    h1{
         font-size:46px;
     }
-    header h2{
+   h2{
         font-size:18px;
         margin-bottom:60px;
     }
-    header h3{
+    h3{
         font-size:16px;
     }
     header a{
@@ -213,11 +238,40 @@ footer a{
             grid-template-columns: 1fr;
         }
     main .main-section-text{
-        padding:0;
+        padding:10px;
         margin:0;
     }
     main{
-
         margin:0;
     }
+    .card-header{
+        display:grid;
+        grid-template-columns: 1fr;
+    }
+    iframe{
+        aspect-ratio: 2/1;
+    }
+    .card-body{
+        padding:30px 10px;
+    }
+    .card-footer a{
+        font-size: 12px;
+        display:block;
+        margin:0 auto;
+        padding:20px 40px;
+    }
+    footer{
+        padding:20px 0 0 0;
+    }
+footer .grid{
+    grid-template-columns: 1fr;
+}
+footer p{
+    font-size: 12px;
+}
+footer a{
+    font-size: 12px;
+    padding:0;
+    margin:0;
+}
 }
